# scientificcomputing_bicocca_2024

working/: L01-L09 Quesiti esame.ipynb  L06_Q2.yml
working/L07/: setup.cfg
working/L08/: publish.yml
working/L08/myexamplepkg/: converter.py
working/L08/tests/: test_converter.py
working/additional_files/L08/fastmath_tools_repo/: MANIFEST.in  README.md  setup.py
working/additional_files/L08/fastmath_tools_repo/fastmath_tools/: __init__.py  math_utils.py
working/additional_files/L08/fastmath_tools_repo/fastmath_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
working/additional_files/L08/fastmath_tools_repo/tests/: conftest.py  test_math_utils.py  test_slow_code.py
working/markov_simulator/: pyproject.toml
working/markov_simulator/src/: __init__.py  core.py
