[metadata]
name = myexamplepkg
version = 0.0.1
author = Gionni Ferri
description = A simple converter module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/myexamplepkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8