[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markov-simulator-gferrante"
version = "0.1.0"
description = "A small demo Markov chain simulator"
readme = "README.md"
authors = [{ name = "Giovanni Ferrante" }]
license = { text = "MIT" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/gferrante/markov-simulator"
